codegen/tests/compile-fail/bad-ident-argument.rs
#![feature(plugin)]
#![plugin(rocket_codegen)]

extern crate rocket;

#[get("/")]
fn get(_: &str) -> &'static str { "hi" } //~ ERROR argument

fn main() {  }
